// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkDefinitionList should render correctly 1`] = `
<dl
  className="bpk-definition-list"
>
  <dt>
    term
  </dt>
  <dd>
    definition
  </dd>
</dl>
`;

exports[`BpkDefinitionList should render correctly with a "className" attribute 1`] = `
<dl
  className="bpk-definition-list test-definition-list"
>
  <dt>
    term
  </dt>
  <dd>
    definition
  </dd>
</dl>
`;

exports[`BpkDefinitionList should render correctly with other attributes 1`] = `
<dl
  className="bpk-definition-list"
  title="this is a definition list"
>
  <dt>
    term
  </dt>
  <dd>
    definition
  </dd>
</dl>
`;
